# libcom

./: .cvsignore  HowCOMWorksInWindows.md  Makefile.am  ProjectHome.md  README  configure.ac
compreg/: Makefile.am  compreg.c
idl/: Makefile.am  astp.h  astp_sim.c  clihamts.c  mtsbacke.c  nidl.h  propagat.c  sysdep.h.in
include/COM/: .cvsignore  COM.h  IClassFactory.h  IClassFactory.idl  ICoRegistry.h  IMalloc.h  IUnknown.h  IUnknown.idl  Makefile.am  classes.h  com.h  guiddef.h  types.h  types.idl
include/DCE-RPC/: .cvsignore  DCE-RPC.h  Makefile.am  idlbase.h  lbase.idl  nbase.idl  rpc.idl  uuid.idl
include/com/: IClassFactory.h  IMalloc.h  IUnknown.h  Makefile.am  api.h  classes.h  com.h  compat.h  error.h  interfaces.h  types.h
libCOM/: global.c  guid.c  instance.c  p_libcom.h  taskmem_xpcom.cc
libDCE-RPC/: Makefile.am  exports.h  internal.h
libDCE-RPC/rpc/: string.c
libDCE-RPC/uuid/: LICENSE  create.c  tostring.c  uuidP.h
libcom/: Makefile.am  global.c  instance.c  p_libcom.h  registry.c  registry_local.c  registry_xpcom.cc  taskmem_posix.c  taskmem_xpcom.cc  test-1.c
libcom-inproc-support/: win32.c  xpcom.c
libdcerpc/: .cvsignore
libdcerpc/uuid/: Changes  compare.c  hash.c  uuid.h  uuidP.h  uuidd.h
tests/: .cvsignore  ITester2.h  ITester3.h  Makefile.am  Test2.h  Test3.h  Test3Factory.h  test-1.c  test-2-guids.h  test-2.c  test-3-factory.c  test-3-guids.h
trunk/: .cvsignore  Doxyfile  LICENSE  Makefile.am  autogen.rc  configure.ac
trunk/compreg/: .cvsignore  Makefile.am
trunk/idl/: SOURCE  acf_y.y  ast.h  checker.c  cstubmts.c  frontend.c  hdgen.c  irepgen.c  keywds.c  nidl_y.y  sstubmts.c
trunk/include/: Makefile.am
trunk/include/COM/: COM.h  IClassFactory.h  ICoRegistry.h  ICoRegistry.idl  IMalloc.h  IMalloc.idl  IUnknown.h  Makefile.am  api.h  api.idl  classes.h  compat.h  compat.idl  error.h  guiddef.h  types.h
trunk/include/DCE-RPC/: .cvsignore  DCE-RPC.h  decl.h  idlbase.h  lbase.idl  nbase.idl  rpc.idl  uuid.idl
trunk/include/com/: IMalloc.h  IUnknown.h  Makefile.am  api.h  classes.h  com.h  compat.h  error.h  types.h
trunk/libCOM/: .cvsignore  Makefile.am  global.c  guid.c  p_libcom.h  p_win32.h  registry.c  registry_cfprefs.c  registry_xpcom.cc  regprovider.c
trunk/libCOM-stubs/: .cvsignore  Makefile.am  win32.c  xpcom.c
trunk/libDCE-RPC/: Makefile.am  exports.h  internal.h
trunk/libDCE-RPC/rpc/: Makefile.am  p_rpc.h
trunk/libDCE-RPC/uuid/: Makefile.am  fromstring.c  tostring.c
trunk/libcom/: Makefile.am  dl.c  global.c  guid.c  instance.c  p_libcom.h  registry.c  registry_local.c  registry_xpcom.cc  taskmem_posix.c  taskmem_win32.c  taskmem_xpcom.cc  test-1.c  xpcom.cc
trunk/libcom-inproc-support/: Makefile.am  win32.c  xpcom.c
trunk/libdcerpc/: Makefile.am  stub.c
trunk/tests/: .cvsignore  ITester2.h  Makefile.am  Test2.h  Test2Factory.h  Test3.h  test-2-factory.c  test-2-guids.h  test-2-server.c  test-3-factory.c  test-3-server.c
uuidgen/: .cvsignore  Makefile.am  uuidgen.c
wiki/: HowCOMWorksInWindows.wiki
